assets/css/style.css
/* ────────────────────────────────────────────────────────────────────────── */
/* ███████████████████████████ ♻️ VARIÁVEIS  ███████████████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

/* BEST COLOR PICKER WEBSITE: https://www.iamsajid.com/ui-colors/ */
:root {
	/* Typography Colors */
	--font-body: "Open Sans", sans-serif;
	--font-headings: "Montserrat", sans-serif;
	/* Spacing variables */
	--spacing0: 0rem; /* 0 px */
	--spacing1: 0.25rem; /* 4 px */
	--spacing2: 0.5rem; /* 8 px */
	--spacing3: 0.75rem; /* 12 px */
	--spacing4: 1.0rem; /* 16 px */
	--spacing45: 1.25rem; /* 20 px */
	--spacing5: 1.5rem; /* 24 px */
	--spacing6: 2rem; /* 32 px */
	--spacing67: 2.5rem; /* 40 px */
	--spacing7: 3rem; /* 48 px */
	--spacing8: 5rem; /* 80 px */
	--spacing9: 6rem; /* 96 px */
	--spacing10: 8rem; /* 128 px */
	--spacing11: 10rem; /* 160 px */
}

:root[data-theme="dark"]{
	/* Typography Colors */
	--color-text-primary: oklch(0.96 0.03 265); /* White */
	--color-text-primary-muted: oklch(0.76 0.03 265); /* Off white */
	--color-subtext: oklch(0.72 0.02 265); /* Subtext */

	/* Brand Colors */
	--color-bg-dark: oklch(0.2 0.015 265); /* Plano de fundo */ /* old color oklch(0.1 0.015 265)*/
	--color-bg: oklch(0.25 0.015 265); /* Plano de fundo */ /* old color oklch(0.15 0.015 265)*/
	--color-bg-light: oklch(0.3 0.015 265); /* old color oklch(0.2 0.015 265)*/
	--color-accent1: #025bb0; /* CTA Button ou oklch(0.76 0.1 265)*/
	--color-accent1-hover: #0372db; /* CTA Button brighter*/
	--color-accent2: oklch(0.76 0.1 85); /* Hover amarelo */

	/* Feedback Colors */
	--color-success: oklch(0.7 0.05 160); 
	--color-warning: oklch(0.7 0.05 100);
	--color-danger: oklch(0.7 0.05 30);

	/* Decoration Colors */
	--color-highlight: oklch(0.5 0.03 265);
	--color-border: oklch(0.4 0.03 265);
	--color-border-muted: oklch(0.3 0.03 265);
	--color-info: oklch(0.7 0.05 260);

	/* Gradients */
	--gradient-bg: linear-gradient(0deg, var(--color-bg) 95%, var(--color-bg-light));
	--gradient-bg-hover: linear-gradient(0deg, var(--color-bg), var(--color-bg-light));

	/* Properties and Values */
	--shadow: 0px 2px 2px hsla(0, 0%, 50%, 0.07), 0px 4px 4px hsla(0, 0%, 50%, 0.15); /*Deslocamento X, Deslocamento Y, Blur, Cor da sombra RGBA*/
	--shadow-hover: 0px 3px 3px hsla(0, 0%, 50%, 0.07), 0px 3px 3px hsla(0, 0%, 50%, 0.15);
	--shadow-active: 0px 2px 2px hsla(0, 0%, 50%, 0.07), 0px 2px 2px hsla(0, 0%, 50%, 0.15);
	--border: solid 1px var(--color-border); /* Borda com cor de borda */
}

:root[data-theme="light"]{
	/* Typography Colors */
	--color-text-primary: oklch(0.15 0.03 265);   /* White */
	--color-text-primary-muted: oklch(0.4 0.03 265);     /* Off white */
	--color-subtext: oklch(0.50 0.02 265); /* Subtext */

	/* Brand Colors */
	--color-bg-dark: oklch(0.92 0.015 265);   /* Plano de fundo */
	--color-bg: oklch(0.96 0.015 265);   /* Plano de fundo */
	--color-bg-light: oklch(1 0.015 265);
	--color-accent1: oklch(0.66 0.1 265); /* CTA Button, find #025bb0 for light mode later */
	--color-accent1-hover: #0372db; /* CTA Button brighter*/
	--color-accent2: oklch(0.4 0.1 85); /* Hover amarelo */

	/* Feedback Colors */
	--color-success: oklch(0.5 0.05 160); 
	--color-warning: oklch(0.5 0.05 100);
	--color-danger: oklch(0.5 0.05 30);

	/* Decoration Colors */
	--color-highlight: oklch(1 0.03 265);
	--color-border: oklch(0.6 0.03 265);
	--color-border-muted: oklch(0.7 0.03 265);
	--color-info: oklch(0.5 0.05 260);

	/* Gradients */
	--gradient-bg: linear-gradient(0deg, var(--color-bg) 95%, var(--color-bg-light));
	--gradient-bg-hover: linear-gradient(0deg, var(--color-bg), var(--color-bg-light));

	/* Properties and Values*/
	--shadow: 0px 2px 2px hsla(0, 0%, 0%, 0.07), 0px 4px 4px hsla(0, 0%, 0%, 0.15); /*Deslocamento X, Deslocamento Y, Blur, Cor da sombra RGBA*/
	--shadow-hover: 0px 3px 3px hsla(0, 0%, 0%, 0.07), 0px 3px 3px hsla(0, 0%, 0%, 0.15);
	--shadow-active: 0px 2px 2px hsla(0, 0%, 0%, 0.07), 0px 2px 2px hsla(0, 0%, 0%, 0.15);
	--border: solid 1px var(--color-bg); /* Borda na cor do bg */
}

:root[data-theme="light"] .logo-header{
	content: url("/assets/img/LogoDark_Pedro AGA Silva Engenheiro Mecânico.png");
}


/* ────────────────────────────────────────────────────────────────────────── */
/* ██████████████████    ✏️ RESET & GLOBAL STYLES    ███████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

*{
/*Layout Padrão*/
	margin: 0;
	padding: 0;
	box-sizing: border-box;

/*Texto Padrão*/
	color: var(--color-text-primary-muted); /*Muted TextColor*/
	font-family: var(--font-body);
	font-size: 1rem; /*16px*/
	line-height: 1.4; /*Espaçamento entre linhas*/
}

html{
	scroll-behavior: smooth;
}

img{
	margin: 0;
}

body{
	background-color: var(--color-bg-dark);
	text-wrap: balance;
}

a:hover{
	opacity: 0.8;
}

button:hover{
	opacity: 0.8;
}


/* ────────────────────────────────────────────────────────────────────────── */
/* ██████████████████████████  📝 TIPOGRAFIA  ██████████████████████████████ */
/* ────────────────────────────────────────────────────────────────────────── */

h1{
	/*Texto*/
	color: var(--color-text-primary); /*Primary TextColor*/
	font-size: var(--spacing7); /*48px*/
	font-weight: bold;
	letter-spacing: -0.02em;
	line-height: 1.1; /*Espaçamento entre linhas*/
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/
}

h2{
	/*Texto*/
	color: var(--color-text-primary-muted); /*Muted TextColor*/
	font-size: var(--spacing67); /*40px*/
	font-weight: bold;
	letter-spacing: -0.01em;
	line-height: 1.1; /*Espaçamento entre linhas*/
	margin-top: var(--spacing4); /*Espaçamento de paragrafo BEFORE*/
	margin-bottom: var(--spacing2); /*Espaçamento de paragrafo AFTER*/

}
/* ... */

